fixed looping and cropped sprites

--- a/splmns-animation/src/components/Character.css
+++ b/splmns-animation/src/components/Character.css
@@ -1,18 +1,21 @@
 .character {
+    /* border: 10px solid grey; */
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 10px solid grey; */
-    pointer-events: "none";
+    justify-content: center;   
+    pointer-events: none;
     bottom: 0;
     left: 0;
+    height: 300px; 
+    width: 200px;  
 }
 
 .name {
     color: #fff;
     padding: 1rem 0.75rem;
-    margin: 1rem 0rem;
+    margin: 0;
     border-radius: 25%;
     border: 4px solid lightblue;
     display: flex;
